add outlier detectors

--- a/tutorials/Tutorial4_OutlierDetection_cardio-Copy1.ipynb
+++ b/tutorials/Tutorial4_OutlierDetection_cardio-Copy1.ipynb
@@ -14,7 +14,6 @@
    "outputs": [],
    "source": [
     "from scipy.io import loadmat\n",
-    "import numpy as np\n",
     "data = loadmat('data/cardio.mat')"
    ]
   },
@@ -24,9 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gt = data['y']\n",
-    "gt = gt.reshape(-1,)\n",
-    "gt_idx = np.array(range(gt.shape[0]))[gt == 1]"
+    "gt = data['y']"
    ]
   },
   {
@@ -89,11 +86,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[0.010177135467529297] Load Data start\n",
+      "INFO:profiler.utility:[0.749248743057251] Load Data start\n",
       "\n",
-      "INFO:profiler.data.dataset:parameters used for data loading:\n",
-      " {'na_values': {'', 'NaN', 'none', 'None', 'unknown', '?', 'nan'}, 'sep': ',', 'header': 'infer', 'dropcol': None, 'dropna': False, 'encoding': 'utf-8', 'normalize': True, 'min_categories_for_embedding': 10}\n",
-      "INFO:profiler.data.dataset:inferred types of attributes: {\n",
+      "INFO:profiler.dataset:parameters used for data loading:\n",
+      " {'na_values': {'', 'nan', 'NaN', '?', 'unknown', 'None', 'none'}, 'sep': ',', 'header': 'infer', 'dropcol': None, 'dropna': False, 'encoding': 'utf-8', 'normalize': True, 'min_categories_for_embedding': 10}\n",
+      "INFO:profiler.dataset:inferred types of attributes: {\n",
       "    \"Columns_0\": \"numeric\",\n",
       "    \"Columns_1\": \"numeric\",\n",
       "    \"Columns_2\": \"numeric\",\n",
@@ -116,10 +113,10 @@
       "    \"Columns_19\": \"numeric\",\n",
       "    \"Columns_20\": \"numeric\"\n",
       "}\n",
-      "INFO:profiler.data.dataset:(possible types: numeric, categorical, text, date)\n",
-      "INFO:profiler.data.dataset:inferred operators of attributes: {'Columns_0': ['equal'], 'Columns_1': ['equal'], 'Columns_2': ['equal'], 'Columns_3': ['equal'], 'Columns_4': ['equal'], 'Columns_5': ['equal'], 'Columns_6': ['equal'], 'Columns_7': ['equal'], 'Columns_8': ['equal'], 'Columns_9': ['equal'], 'Columns_10': ['equal'], 'Columns_11': ['equal'], 'Columns_12': ['equal'], 'Columns_13': ['equal'], 'Columns_14': ['equal'], 'Columns_15': ['equal'], 'Columns_16': ['equal'], 'Columns_17': ['equal'], 'Columns_18': ['equal'], 'Columns_19': ['equal'], 'Columns_20': ['equal']}\n",
-      "INFO:profiler.data.dataset:(possible operators: equal, notequal, greater_than, less_than)\n",
-      "INFO:profiler.utility:[0.03266787528991699] Load Data execution time: 0.022490739822387695\n",
+      "INFO:profiler.dataset:(possible types: numeric, categorical, text, date)\n",
+      "INFO:profiler.dataset:inferred operators of attributes: {'Columns_0': ['equal'], 'Columns_1': ['equal'], 'Columns_2': ['equal'], 'Columns_3': ['equal'], 'Columns_4': ['equal'], 'Columns_5': ['equal'], 'Columns_6': ['equal'], 'Columns_7': ['equal'], 'Columns_8': ['equal'], 'Columns_9': ['equal'], 'Columns_10': ['equal'], 'Columns_11': ['equal'], 'Columns_12': ['equal'], 'Columns_13': ['equal'], 'Columns_14': ['equal'], 'Columns_15': ['equal'], 'Columns_16': ['equal'], 'Columns_17': ['equal'], 'Columns_18': ['equal'], 'Columns_19': ['equal'], 'Columns_20': ['equal']}\n",
+      "INFO:profiler.dataset:(possible operators: equal, notequal, greater_than, less_than)\n",
+      "INFO:profiler.utility:[0.7846288681030273] Load Data execution time: 0.03538012504577637\n",
       "\n"
      ]
     }
@@ -405,16 +402,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[0.12276005744934082] Create Training Data start\n",
+      "INFO:profiler.utility:[2.915977954864502] Create Training Data start\n",
       "\n",
-      "INFO:profiler.data.transformer:needs multiplier = 147 to bound the error in inv cov estimation <= 0.05000000\n",
-      "INFO:profiler.data.transformer:use multiplier = 147, and the bound is 0.00005523\n",
-      "INFO:profiler.data.transformer:Draw Pairs\n",
-      "100%|██████████| 21/21 [00:00<00:00, 73.07it/s]\n",
-      "INFO:profiler.data.transformer:Number of training samples: 269157\n",
-      "INFO:profiler.data.transformer:Computing Differences\n",
-      "INFO:profiler.data.transformer:estimated missing data probability in training data is 0.0000\n",
-      "INFO:profiler.utility:[1.4184861183166504] Create Training Data execution time: 1.2957260608673096\n",
+      "INFO:profiler.transformer:needs multiplier = 147 to bound the error in inv cov estimation <= 0.05000000\n",
+      "INFO:profiler.transformer:use multiplier = 147, and the bound is 0.00005523\n",
+      "INFO:profiler.transformer:Draw Pairs\n",
+      "100%|██████████| 21/21 [00:00<00:00, 126.44it/s]\n",
+      "INFO:profiler.transformer:Number of training samples: 269157\n",
+      "INFO:profiler.transformer:Computing Differences\n",
+      "INFO:profiler.transformer:estimated missing data probability in training data is 0.0000\n",
+      "INFO:profiler.utility:[3.7840259075164795] Create Training Data execution time: 0.8680479526519775\n",
       "\n"
      ]
     }
@@ -441,10 +438,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[1.4275290966033936] Learn Structure start\n",
+      "INFO:profiler.utility:[5.7176148891448975] Learn Structure start\n",
       "\n",
       "INFO:profiler.learner:use threshold 0.0358\n",
-      "INFO:profiler.utility:[1.8851001262664795] Learn Structure execution time: 0.45757102966308594\n",
+      "INFO:profiler.utility:[6.09987998008728] Learn Structure execution time: 0.3822650909423828\n",
       "\n"
      ]
     }
@@ -472,7 +469,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[1.8940019607543945] Get Dependencies start\n",
+      "INFO:profiler.utility:[6.106130838394165] Get Dependencies start\n",
+      "\n",
+      "INFO:profiler.utility:[6.21753191947937] Get Dependencies execution time: 0.11140108108520508\n",
       "\n"
      ]
     },
@@ -494,21 +493,7 @@
       "Columns_0,Columns_16,Columns_17 -> Columns_18 (0.08162499448016573)\n",
       "Columns_0 -> Columns_7 (0.0807971105059033)\n",
       "Columns_1,Columns_4 -> Columns_19 (0.09220141422612424)\n",
-      "Columns_4,Columns_19 -> Columns_14 (0.14813493126949198)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:profiler.utility:[2.1567790508270264] Get Dependencies execution time: 0.26277709007263184\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Columns_4,Columns_19 -> Columns_14 (0.14813493126949198)\n",
       "Columns_4 -> Columns_3 (0.035127030549545475)\n"
      ]
     }
@@ -621,57 +606,57 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.010177</td>\n",
+       "      <td>0.749249</td>\n",
        "      <td>start: Load Data</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.032668</td>\n",
+       "      <td>0.784629</td>\n",
        "      <td>end: Load Data</td>\n",
-       "      <td>0.022491</td>\n",
+       "      <td>0.035380</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.122760</td>\n",
+       "      <td>2.915978</td>\n",
        "      <td>start: Create Training Data</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1.418486</td>\n",
+       "      <td>3.784026</td>\n",
        "      <td>end: Create Training Data</td>\n",
-       "      <td>1.295726</td>\n",
+       "      <td>0.868048</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1.427529</td>\n",
+       "      <td>5.717615</td>\n",
        "      <td>start: Learn Structure</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>1.885100</td>\n",
+       "      <td>6.099880</td>\n",
        "      <td>end: Learn Structure</td>\n",
-       "      <td>0.457571</td>\n",
+       "      <td>0.382265</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>1.894002</td>\n",
+       "      <td>6.106131</td>\n",
        "      <td>start: Get Dependencies</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>2.156779</td>\n",
+       "      <td>6.217532</td>\n",
        "      <td>end: Get Dependencies</td>\n",
-       "      <td>0.262777</td>\n",
+       "      <td>0.111401</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>2.156779</td>\n",
+       "      <td>6.217532</td>\n",
        "      <td>total_execution_time</td>\n",
-       "      <td>2.038565</td>\n",
+       "      <td>1.397094</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -679,15 +664,15 @@
       ],
       "text/plain": [
        "   time_point                          msg  execution_time\n",
-       "0    0.010177             start: Load Data        0.000000\n",
-       "1    0.032668               end: Load Data        0.022491\n",
-       "2    0.122760  start: Create Training Data        0.000000\n",
-       "3    1.418486    end: Create Training Data        1.295726\n",
-       "4    1.427529       start: Learn Structure        0.000000\n",
-       "5    1.885100         end: Learn Structure        0.457571\n",
-       "6    1.894002      start: Get Dependencies        0.000000\n",
-       "7    2.156779        end: Get Dependencies        0.262777\n",
-       "8    2.156779         total_execution_time        2.038565"
+       "0    0.749249             start: Load Data        0.000000\n",
+       "1    0.784629               end: Load Data        0.035380\n",
+       "2    2.915978  start: Create Training Data        0.000000\n",
+       "3    3.784026    end: Create Training Data        0.868048\n",
+       "4    5.717615       start: Learn Structure        0.000000\n",
+       "5    6.099880         end: Learn Structure        0.382265\n",
+       "6    6.106131      start: Get Dependencies        0.000000\n",
+       "7    6.217532        end: Get Dependencies        0.111401\n",
+       "8    6.217532         total_execution_time        1.397094"
       ]
      },
      "execution_count": 16,
@@ -705,43 +690,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from profiler.app.od import *"
+    "gt = gt.reshape(-1,)\n",
+    "gt_idx = np.array(range(gt.shape[0]))[gt == 1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "detector = STDDetector(pf.session.ds.df, gt_idx)\n",
-    "detector.run_all(parent_sets)\n",
-    "detector.evaluate()"
+    "from od import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[0.00015425682067871094] naive start\n",
-      "\n",
-      "INFO:profiler.utility:[6.175818204879761] naive execution time: 6.175663948059082\n",
-      "\n",
-      "INFO:profiler.utility:[6.1771111488342285] structured start\n",
-      "\n",
-      " 76%|███████▌  | 16/21 [00:02<00:00,  6.81it/s]"
+      "  0%|          | 0/1831 [00:00<?, ?it/s]\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'cmpr_detection' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-27-21f9ca0af113>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0moverall\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstructured\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mremoveOutStd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msession\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mds\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparent_sets\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/Documents/Profiler-Public/tutorials/od.py\u001b[0m in \u001b[0;36mremoveOutStd\u001b[0;34m(parent_sets, m1, m2)\u001b[0m\n\u001b[1;32m     60\u001b[0m     \u001b[0mimprov\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     61\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mchild\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtqdm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparent_sets\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 62\u001b[0;31m         \u001b[0moverall\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstructured\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstd_method\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparent_sets\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mchild\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mchild\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mm1\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mm1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mm2\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mm2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     63\u001b[0m         \u001b[0mbase\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mextend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moverall\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     64\u001b[0m         \u001b[0mimprov\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mextend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstructured\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'cmpr_detection' is not defined"
      ]
     }
    ],
    "source": [
-    "detector2 = ISFDetector(pf.session.ds.df, gt_idx)\n",
-    "detector2.run_all(parent_sets)\n",
-    "detector2.evaluate()"
+    "overall, structured = removeOutStd(pf.session.ds.df, parent_sets)"
    ]
   },
   {
@@ -749,28 +737,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# for each attribute\n",
+    "# holodetect data\n",
+    "# cleanML, try seiver \n",
+    "\n",
+    "# imputation\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fd3",
+   "display_name": "Python (fd37)",
    "language": "python",
-   "name": "fd3"
+   "name": "fd37"
   },
   "language_info": {
    "codemirror_mode": {
