--- a/tutorials/Tutorial5_OD_yeast.ipynb
+++ b/tutorials/Tutorial5_OD_yeast.ipynb
@@ -166,6 +166,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "507"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(gt_idx)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
