--- a/tutorials/Tutorial5_OD_abalone-knn-high-dim.ipynb
+++ b/tutorials/Tutorial5_OD_abalone-knn-high-dim.ipynb
@@ -152,7 +152,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/mydata/Profiler-Public\n"
+     ]
+    }
+   ],
+   "source": [
+    "cd .."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,17 +210,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[0.008435964584350586] Load Data start\n",
+      "INFO:profiler.utility:[2.5616350173950195] Load Data start\n",
       "\n",
       "INFO:profiler.data.dataset:parameters used for data loading:\n",
-      " {'na_values': {'', 'NaN', '?', 'unknown', 'nan', 'None', 'none'}, 'sep': ',', 'header': 'infer', 'dropcol': None, 'dropna': False, 'encoding': 'utf-8', 'normalize': True, 'min_categories_for_embedding': 10}\n",
+      " {'na_values': {'', 'nan', 'none', 'unknown', '?', 'NaN', 'None'}, 'sep': ',', 'header': 'infer', 'dropcol': None, 'dropna': False, 'encoding': 'utf-8', 'normalize': True, 'min_categories_for_embedding': 10}\n",
       "INFO:profiler.data.dataset:inferred types of attributes: {\n",
       "    \"Y\": \"numeric\",\n",
       "    \"F1\": \"categorical\",\n",
@@ -218,7 +235,7 @@
       "INFO:profiler.data.dataset:(possible types: numeric, categorical, text, date)\n",
       "INFO:profiler.data.dataset:inferred operators of attributes: {'Y': ['equal'], 'F1': ['equal'], 'V1': ['equal'], 'V2': ['equal'], 'V3': ['equal'], 'V4': ['equal'], 'V5': ['equal'], 'V6': ['equal'], 'V7': ['equal']}\n",
       "INFO:profiler.data.dataset:(possible operators: equal, notequal, greater_than, less_than)\n",
-      "INFO:profiler.utility:[0.03270602226257324] Load Data execution time: 0.024270057678222656\n",
+      "INFO:profiler.utility:[2.5821125507354736] Load Data execution time: 0.0204775333404541\n",
       "\n"
      ]
     }
@@ -241,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -282,23 +299,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[0.0638270378112793] Create Training Data start\n",
+      "INFO:profiler.utility:[15.505944728851318] Create Training Data start\n",
       "\n",
       "INFO:profiler.data.transformer:needs multiplier = 9 to bound the error in inv cov estimation <= 0.05000000\n",
       "INFO:profiler.data.transformer:use multiplier = 9, and the bound is 0.00017033\n",
       "INFO:profiler.data.transformer:Draw Pairs\n",
-      "100%|██████████| 9/9 [00:00<00:00, 221.76it/s]\n",
+      "100%|██████████| 9/9 [00:00<00:00, 214.46it/s]\n",
       "INFO:profiler.data.transformer:Number of training samples: 37593\n",
       "INFO:profiler.data.transformer:Computing Differences\n",
       "INFO:profiler.data.transformer:estimated missing data probability in training data is 0.0000\n",
-      "INFO:profiler.utility:[0.20738625526428223] Create Training Data execution time: 0.14355921745300293\n",
+      "INFO:profiler.utility:[15.747708320617676] Create Training Data execution time: 0.24176359176635742\n",
       "\n"
      ]
     }
@@ -318,17 +335,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[0.2203671932220459] Learn Structure start\n",
+      "INFO:profiler.utility:[18.57251477241516] Learn Structure start\n",
       "\n",
       "INFO:profiler.learner:use threshold 0.0688\n",
-      "INFO:profiler.utility:[0.33636999130249023] Learn Structure execution time: 0.11600279808044434\n",
+      "INFO:profiler.utility:[18.692818641662598] Learn Structure execution time: 0.12030386924743652\n",
       "\n"
      ]
     }
@@ -349,16 +366,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[0.34418606758117676] Get Dependencies start\n",
+      "INFO:profiler.utility:[22.15825128555298] Get Dependencies start\n",
       "\n",
-      "INFO:profiler.utility:[0.3897249698638916] Get Dependencies execution time: 0.045538902282714844\n",
+      "INFO:profiler.utility:[22.20909309387207] Get Dependencies execution time: 0.0508418083190918\n",
       "\n"
      ]
     },
@@ -367,11 +384,11 @@
      "output_type": "stream",
      "text": [
       "V3 -> V4 (0.2008338812632871)\n",
-      "V3,V4 -> V5 (0.18094646861090313)\n",
-      "V3,V4,V5 -> V6 (0.1895513423865562)\n",
-      "V3,V4,V5,V6 -> V7 (0.1915081866856929)\n",
-      "V3,V4,V7 -> V2 (0.19611317528179012)\n",
-      "V4,V7,V2 -> V1 (0.192234024859124)\n",
+      "V3,V4 -> V5 (0.1809464686109031)\n",
+      "V3,V4,V5 -> V6 (0.18955134238655622)\n",
+      "V3,V4,V5,V6 -> V7 (0.19150818668569286)\n",
+      "V3,V4,V7 -> V2 (0.19611317528179015)\n",
+      "V4,V7,V2 -> V1 (0.19223402485912403)\n",
       "V7 -> F1 (0.24970344566920666)\n"
      ]
     }
@@ -708,9 +725,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (fd37)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "fd37"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
