edit chicago taxi

--- a/tutorials/Tutorial3_Chicago-taxi-train.ipynb
+++ b/tutorials/Tutorial3_Chicago-taxi-train.ipynb
@@ -19,13 +19,13 @@
       "Here's what we downloaded:\n",
       "\u001b[34meval\u001b[m\u001b[m    \u001b[34mserving\u001b[m\u001b[m \u001b[34mtrain\u001b[m\u001b[m\r\n",
       "\r\n",
-      "/var/folders/l3/8q3yqb5j65zb_h8d7jzfk_gw0000gn/T/tmpmqlzxd7r/data/eval:\r\n",
+      "/var/folders/gm/yftb1thj7rl4hwccxwffhpmc0000gn/T/tmpklgdoapv/data/eval:\r\n",
       "data.csv\r\n",
       "\r\n",
-      "/var/folders/l3/8q3yqb5j65zb_h8d7jzfk_gw0000gn/T/tmpmqlzxd7r/data/serving:\r\n",
+      "/var/folders/gm/yftb1thj7rl4hwccxwffhpmc0000gn/T/tmpklgdoapv/data/serving:\r\n",
       "data.csv\r\n",
       "\r\n",
-      "/var/folders/l3/8q3yqb5j65zb_h8d7jzfk_gw0000gn/T/tmpmqlzxd7r/data/train:\r\n",
+      "/var/folders/gm/yftb1thj7rl4hwccxwffhpmc0000gn/T/tmpklgdoapv/data/train:\r\n",
       "data.csv\r\n"
      ]
     }
@@ -54,16 +54,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = '/var/folders/l3/8q3yqb5j65zb_h8d7jzfk_gw0000gn/T/tmpmqlzxd7r/data/train/'"
+    "train_path = BASE_DIR + '/data/train/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,11 +83,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pf = Profiler(workers=2, tol=1e-6, eps=0.05, embedtxt=False)"
+    "pf = Profiler(workers=2, tol=1e-6, eps=0.01, embedtxt=True)"
    ]
   },
   {
@@ -104,19 +104,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[0.41002583503723145] Load Data start\n",
+      "INFO:profiler.utility:[0.8506679534912109] Load Data start\n",
       "\n",
-      "INFO:profiler.dataset:parameters used for data loading:\n",
-      " {'na_values': {'', 'nan', '?', 'NaN', 'unknown', 'None', 'none'}, 'sep': ',', 'header': 'infer', 'dropcol': None, 'dropna': False, 'encoding': 'utf-8', 'normalize': True, 'min_categories_for_embedding': 10}\n",
-      "WARNING:profiler.dataset:Dropping the following null column from the dataset: 'pickup_census_tract'\n",
-      "INFO:profiler.dataset:inferred types of attributes: {\n",
+      "INFO:profiler.data.dataset:parameters used for data loading:\n",
+      " {'na_values': {'', 'none', 'nan', 'NaN', 'None', 'unknown', '?'}, 'sep': ',', 'header': 'infer', 'dropcol': None, 'dropna': False, 'encoding': 'utf-8', 'normalize': True, 'min_categories_for_embedding': 10}\n",
+      "WARNING:profiler.data.dataset:Dropping the following null column from the dataset: 'pickup_census_tract'\n",
+      "INFO:profiler.data.dataset:inferred types of attributes: {\n",
       "    \"pickup_community_area\": \"numeric\",\n",
       "    \"fare\": \"numeric\",\n",
       "    \"trip_start_month\": \"numeric\",\n",
@@ -135,21 +135,21 @@
       "    \"dropoff_community_area\": \"numeric\",\n",
       "    \"tips\": \"numeric\"\n",
       "}\n",
-      "INFO:profiler.dataset:(possible types: numeric, categorical, text, date)\n",
-      "INFO:profiler.dataset:inferred operators of attributes: {'pickup_community_area': ['equal'], 'fare': ['equal'], 'trip_start_month': ['equal'], 'trip_start_hour': ['equal'], 'trip_start_day': ['equal'], 'trip_start_timestamp': ['equal'], 'pickup_latitude': ['equal'], 'pickup_longitude': ['equal'], 'dropoff_latitude': ['equal'], 'dropoff_longitude': ['equal'], 'trip_miles': ['equal'], 'dropoff_census_tract': ['equal'], 'payment_type': ['equal'], 'company': ['equal'], 'trip_seconds': ['equal'], 'dropoff_community_area': ['equal'], 'tips': ['equal']}\n",
-      "INFO:profiler.dataset:(possible operators: equal, notequal, greater_than, less_than)\n",
-      "INFO:profiler.utility:[0.4793508052825928] Load Data execution time: 0.06932497024536133\n",
+      "INFO:profiler.data.dataset:(possible types: numeric, categorical, text, date)\n",
+      "INFO:profiler.data.dataset:inferred operators of attributes: {'pickup_community_area': ['equal'], 'fare': ['equal'], 'trip_start_month': ['equal'], 'trip_start_hour': ['equal'], 'trip_start_day': ['equal'], 'trip_start_timestamp': ['equal'], 'pickup_latitude': ['equal'], 'pickup_longitude': ['equal'], 'dropoff_latitude': ['equal'], 'dropoff_longitude': ['equal'], 'trip_miles': ['equal'], 'dropoff_census_tract': ['equal'], 'payment_type': ['equal'], 'company': ['equal'], 'trip_seconds': ['equal'], 'dropoff_community_area': ['equal'], 'tips': ['equal']}\n",
+      "INFO:profiler.data.dataset:(possible operators: equal, notequal, greater_than, less_than)\n",
+      "INFO:profiler.utility:[0.9329688549041748] Load Data execution time: 0.08230090141296387\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "pf.session.load_data(name='hospital', src=FILE, fpath=path+'data.csv', check_param=True)"
+    "pf.session.load_data(name='taxi', src=FILE, fpath=train_path+'data.csv', check_param=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>22</td>\n",
        "      <td>12.85</td>\n",
        "      <td>3</td>\n",
@@ -214,7 +214,7 @@
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>22</td>\n",
        "      <td>5.45</td>\n",
        "      <td>8</td>\n",
@@ -234,7 +234,7 @@
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>33</td>\n",
        "      <td>0.00</td>\n",
        "      <td>5</td>\n",
@@ -254,7 +254,7 @@
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>33</td>\n",
        "      <td>11.05</td>\n",
        "      <td>3</td>\n",
@@ -274,7 +274,7 @@
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>33</td>\n",
        "      <td>11.05</td>\n",
        "      <td>5</td>\n",
@@ -334,7 +334,7 @@
        "4                     8.0   0.0  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,11 +360,7 @@
    "execution_count": 16,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# pf.session.change_dtypes(['ProviderNumber', 'ZipCode', 'PhoneNumber', 'State', 'EmergencyService','Score', 'Sample'], \n",
-    "#                             [CATEGORICAL, NUMERIC, CATEGORICAL, TEXT, TEXT, NUMERIC, NUMERIC],\n",
-    "#                             [None, None, None, None, None, r'(\\d+)%', r'(\\d+)\\spatients'])"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -378,13 +374,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:profiler.utility:[53.56311917304993] Load Embedding start\n",
+      "\n",
+      "INFO:profiler.data.embedding:[company] tokenize cell\n",
+      "INFO:profiler.data.embedding:[company] train language model\n",
+      "INFO:profiler.data.embedding:[company] compute weights\n",
+      "INFO:profiler.data.embedding:[company] create vector map\n",
+      "INFO:profiler.data.embedding:[company] save vec and vocab\n",
+      "INFO:profiler.utility:[80.73595905303955] Load Embedding execution time: 27.172839879989624\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "#pf.session.load_embedding(save=True, path='data/hospital/', load=True)"
+    "pf.session.load_embedding(save=True, path='data/chicago_taxi/', load=False)"
    ]
   },
   {
@@ -433,18 +445,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:profiler.utility:[233.52776670455933] Learn Structure start\n",
-      "\n",
-      "INFO:profiler.learner:use threshold 0.0280\n",
-      "INFO:profiler.utility:[233.6793248653412] Learn Structure execution time: 0.15155816078186035\n",
+      "INFO:profiler.utility:[80.74447298049927] Learn Structure start\n",
       "\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'values'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-21-efef7f213463>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mautoregress_matrix\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msession\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlearn_structure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msparsity\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.03\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minfer_order\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/Downloads/Profiler-Public/profiler/core.py\u001b[0m in \u001b[0;36mlearn_structure\u001b[0;34m(self, **kwargs)\u001b[0m\n\u001b[1;32m    228\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mlearn_structure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    229\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtimer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime_start\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Learn Structure'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 230\u001b[0;31m         \u001b[0mresults\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstruct_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlearn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    231\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtimer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime_end\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Learn Structure'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    232\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mresults\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Downloads/Profiler-Public/profiler/learner.py\u001b[0m in \u001b[0;36mlearn\u001b[0;34m(self, **kwargs)\u001b[0m\n\u001b[1;32m     42\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mlearn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparam\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 44\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcov\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mestimate_covariance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     45\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minv_cov\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mestimate_inverse_covariance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcov\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     46\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparam\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'infer_order'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Downloads/Profiler-Public/profiler/learner.py\u001b[0m in \u001b[0;36mestimate_covariance\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    229\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    230\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mestimate_covariance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 231\u001b[0;31m         \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msession\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrans_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtraining_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    232\u001b[0m         \u001b[0mcolumns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msession\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrans_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtraining_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    233\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'values'"
      ]
     }
    ],
@@ -704,9 +727,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (fd37)",
+   "display_name": "pf",
    "language": "python",
-   "name": "fd37"
+   "name": "pf"
   },
   "language_info": {
    "codemirror_mode": {
@@ -718,7 +741,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
