--- a/tutorials/Tutorial2_TECHospital_inferred_order.ipynb
+++ b/tutorials/Tutorial2_TECHospital_inferred_order.ipynb
@@ -459,9 +459,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (fd37)",
+   "display_name": "pf",
    "language": "python",
-   "name": "fd37"
+   "name": "pf"
   },
   "language_info": {
    "codemirror_mode": {
@@ -473,7 +473,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
