--- a/tutorials/Tutorial3_Chicago-taxi-train-analysis.ipynb
+++ b/tutorials/Tutorial3_Chicago-taxi-train-analysis.ipynb
@@ -788,9 +788,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fd3",
+   "display_name": "pf",
    "language": "python",
-   "name": "fd3"
+   "name": "pf"
   },
   "language_info": {
    "codemirror_mode": {
@@ -802,7 +802,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
